crates/alloy-signer/tests/trybuild/no_async_signing_provider.stderr
error[E0277]: the trait bound `LocalAlloyKeystoreSigner: AsyncSigningProvider` is not satisfied
  --> tests/trybuild/no_async_signing_provider.rs:14:37
   |
14 |     requires_async_signing_provider(&signer);
   |     ------------------------------- ^^^^^^^ the trait `Provider` is not implemented for `LocalAlloyKeystoreSigner`
   |     |
   |     required by a bound introduced by this call
   |
   = note: required for `LocalAlloyKeystoreSigner` to implement `AsyncSigningProvider`
note: required by a bound in `requires_async_signing_provider`
  --> tests/trybuild/no_async_signing_provider.rs:4:39
   |
 4 | fn requires_async_signing_provider<P: AsyncSigningProvider>(_provider: &P) {}
   |                                       ^^^^^^^^^^^^^^^^^^^^ required by this bound in `requires_async_signing_provider`
